Prevent the basic template page from having horizontal scroll

--- a/src/templates/BasicTemplate.css
+++ b/src/templates/BasicTemplate.css
@@ -1,7 +1,3 @@
-.page {
-  width: 100%;
-}
-
 .container {
   display: flex;
   gap: 4px;
